# memory-graph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUES_TRACKER.md  MVP_COMPLETION_SUMMARY.md  OBSERVATORY_BIDIRECTIONAL_INTEGRATION.md  OBSERVATORY_QUICK_START.md  README-IMPLEMENTATION.md  README.md  TEST_COVERAGE.md  VALIDATION_SUMMARY.md  build.rs  package-lock.json  package.json
.github/workflows/: publish-crates.yml  publish-npm.yml
.swarm/: state.json
agents/conversation-memory/: AGENT_SPEC.md  jest.config.js  package.json
agents/conversation-memory/src/: agent.ts  cli.ts  index.ts  ruvector-client.ts  telemetry.ts  types.ts
agents/decision-memory/: AGENT_CONTRACT.md  Cargo.toml
agents/decision-memory/src/: agent.rs  contracts.rs  error.rs  handler.rs  lib.rs  ruvector.rs  telemetry.rs
agents/decision-memory/tests/: integration_tests.rs
agents/knowledge-graph-builder/: README.md  contract.ts  package-lock.json  package.json  tsconfig.json
agents/knowledge-graph-builder/src/: confidence.ts  decision-event.ts  extractor.ts  graph-builder.ts  handler.ts  index.ts  ruvector-client.ts  telemetry.ts  types.ts
agents/knowledge-graph-builder/tests/: VERIFICATION_CHECKLIST.md  confidence.test.ts  contract.test.ts  decision-event.test.ts  extractor.test.ts  integration.test.ts
agents/long-term-pattern/: package.json  tsconfig.json
agents/long-term-pattern/src/: agent.ts  index.ts  ruvector-client.ts  telemetry.ts  types.ts
agents/memory-retrieval/: package-lock.json  package.json
agents/memory-retrieval/src/: agent.ts  index.ts  ruvector-client.ts  telemetry.ts  types.ts
agents/prompt-lineage/: AGENT_SPEC.md  Cargo.toml
agents/prompt-lineage/contracts/: mod.rs
agents/prompt-lineage/src/: cli.rs  handler.rs  lib.rs  lineage.rs  main.rs  telemetry.rs
agents/prompt-lineage/tests/: smoke_tests.rs
benches/: batch_performance.rs  cache_performance.rs  pool_performance.rs  streaming_performance.rs
benchmarks/: README.md
clients/typescript/: IMPLEMENTATION-SUMMARY.md  QUICK-REFERENCE.md  README.md  TESTING.md  TEST_SUMMARY.md  jest.config.js  package-lock.json  package.json  typedoc.json
clients/typescript/examples/: production-features.ts
clients/typescript/src/: client.ts  errors.ts  index.ts  retry.ts  utils.ts  validators.ts
clients/typescript/tests/: README.md
contracts/agentics-contracts/: index.ts  package.json  tsconfig.json
contracts/agentics-contracts/registry/: conversation-memory-agent.yaml
contracts/agentics-contracts/schemas/: conversation-memory.schema.json  decision-event.schema.json  decision-memory.schema.json  knowledge-graph-builder.schema.json  long-term-pattern.schema.json  memory-retrieval.schema.json
crates/llm-memory-graph/: Cargo.toml
crates/llm-memory-graph-cli/: Cargo.toml  TESTING.md
crates/llm-memory-graph-cli/src/: main.rs
crates/llm-memory-graph-cli/tests/: README.md
crates/llm-memory-graph-client/: Cargo.toml  build.rs
crates/llm-memory-graph-client/src/: client.rs  error.rs  lib.rs
crates/llm-memory-graph/src/: lib.rs
data/: db  snap.0000000000000223
data/graph.db/: db  snap.0000000000001CA0
data/tool_demo.db/: db
deploy/docker/: .dockerignore  .env.example  DEPLOYMENT-REPORT.md  DEPLOYMENT-SUMMARY.md  Dockerfile  README.md  docker-compose.yml  grafana-dashboards.yml  grafana-datasources.yml  health-check.sh  prometheus.yml  start.sh  validate.sh
deploy/gcloud/: DEPLOYMENT.md  Dockerfile  cloudbuild.yaml  deploy.sh  env.yaml  service-router.js  service.yaml  setup-iam.sh
deploy/gcloud/phase2/: budgets.js  cache.js  deploy.sh  index.js  signals.js  startup.js
deploy/kubernetes/: ARCHITECTURE.md  DEPLOYMENT-REPORT.md  MANIFEST-INDEX.md  QUICK-START.md  README.md  cleanup.sh  configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  servicemonitor.yaml  validate.sh
docs/: API.md  DOCUMENTATION_SUMMARY.md  EXAMPLES.md  GRPC_INTEGRATION_TEST_REPORT.md  GRPC_TESTING_GUIDE.md  GRPC_TEST_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION.md  INTEGRATIONS-IMPLEMENTATION-REPORT.md  INTEGRATIONS.md  PLUGIN_SYSTEM.md  QUICK_FIX_GUIDE.md  README.md  SWARM_EXECUTION_SUMMARY.md  TEST_DELIVERABLES.md  VAULT_STORAGE_IMPLEMENTATION_SUMMARY.md  VAULT_STORAGE_INTEGRATION.md
docs/cli/: README.md  commands.md  examples.md  help-output.txt
docs/guides/: advanced.md  authentication.md  quickstart.md
docs/rust/: crates.js  help.html  settings.html  src-files.js
docs/typescript/: hierarchy.html  index.html  modules.html
examples/: async_streaming_queries.rs  edge_properties.rs  migration_guide.rs  observatory_demo.rs  prompt_templates.rs  simple_chatbot.rs  tool_invocations.rs  vault_storage_integration.rs
functions/: index.js
grafana/: QUICKSTART.md  README.md  memory-graph-overview.json
plans/: DEPLOYMENT_CHECKLIST.md  PHASE_2B_COMPLETION_REPORT.md  PRODUCTION-PHASE-IMPLEMENTATION-PLAN.md  PRODUCTION_READINESS_REPORT.md  QA_REPORTS_INDEX.md
plugins/example_enricher/: Cargo.toml
plugins/example_enricher/src/: lib.rs
plugins/example_validator/: Cargo.toml
plugins/example_validator/src/: lib.rs
scripts/: setup_grpc_tests.sh
src/: error.rs  lib.rs  migration.rs
src/engine/: async_memory_graph.rs  mod.rs
src/execution/: agent-adapter.ts  artifact-builder.ts  executor.ts  index.ts  types.ts
src/grpc/: converters.rs  handlers.rs  service.rs
src/integrations/: mod.rs
src/observatory/: emitter.rs  events.rs  kafka.rs  prometheus.rs  publisher.rs  streaming.rs
src/plugin/: hooks.rs  manager.rs  mod.rs  registry.rs
src/query/: async_query.rs  mod.rs
src/storage/: async_sled_backend.rs  cache.rs  mod.rs  pooled_backend.rs  serialization.rs  sled_backend.rs
src/types/: edges.rs  ids.rs  mod.rs  nodes.rs
tests/: README_GRPC_TESTS.md  edge_properties_integration_test.rs  grpc_integration_test.rs.disabled  integration_test.rs  integrations_test.rs.disabled  observatory_integration_test.rs  plugin_integration_test.rs  template_integration_test.rs  tool_invocation_integration_test.rs
(+763 files in other folders)
