[package]
name = "llm-memory-graph"
version = "0.1.0"
edition = "2021"
authors = ["LLM DevOps Contributors"]
description = "Graph-based context-tracking and prompt-lineage database for LLM systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/globalbusinessadvisors/llm-memory-graph"
keywords = ["llm", "graph", "memory", "context", "devops"]
categories = ["database", "development-tools"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack
bincode = "1.3"

# Storage backend
sled = "0.34"

# Graph algorithms
petgraph = "0.6"

# Identifiers and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Utilities
once_cell = "1.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
test-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
