[package]
name = "example_enricher"
version = "1.0.0"
edition = "2021"
authors = ["LLM DevOps Team"]
description = "Example metadata enrichment plugin for LLM-Memory-Graph"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
llm-memory-graph = { path = "../.." }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1.6", features = ["v4"] }
