[package]
name = "example_validator"
version = "1.0.0"
edition = "2021"
authors = ["LLM DevOps Team"]
description = "Example content validation plugin for LLM-Memory-Graph"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
llm-memory-graph = { path = "../.." }
async-trait = "0.1"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
